# has-constructor-plugin

./: HasConstructor2.hs  Rel8-Records.hs  Representable1.hs
has-constructor-plugin/: CHANGELOG.md  HasConstructor.hs  Plugin.hs  has-constructor-plugin.cabal
has-constructor-test/: CHANGELOG.md  Test.hs  has-constructor-test.cabal
