cabal-version:       2.0.0
name:                has-constructor-plugin
version:             0.1.0.0
author:              Ollie Charles
maintainer:          ollie@ocharles.org.uk
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  build-depends:       base >=4.12 && <4.13, ghc, uniplate
  exposed-modules:     Plugin, HasConstructor
  default-language:    Haskell2010
